--- a/README.Rmd
+++ b/README.Rmd
@@ -16,4 +16,16 @@ knitr::opts_chunk$set(
 
 # introbiocure
 
-More info soon...
+Tools for Managing BIO 180 and BIO 200 data
+
+For more information, see [Working with introbiocure](https://github.com/KerrLab/introbiocure/blob/master/vignettes/working_with_introbiocure.Rmd).
+
+
+## Installation
+
+To install `introbiocure`, run the following commands in RStudio.
+
+```{r Install introbiocure, eval=FALSE}
+if(!require("devtools")) install.packages("devtools")
+devtools::install_github("kerrlab/introbiocure", build_vignettes = TRUE)
+```
