--- a/vignettes/working_with_introbiocure.Rmd
+++ b/vignettes/working_with_introbiocure.Rmd
@@ -2,10 +2,9 @@
 title: "Working with introbiocure"
 author: "Brian Connelly"
 date: "`r Sys.Date()`"
-#output: rmarkdown::html_vignette
-output: rmarkdown::pdf_document
+output: rmarkdown::html_vignette
 vignette: >
-  %\VignetteIndexEntry{Vignette Title}
+  %\VignetteIndexEntry{Working with introbiocure}
   %\VignetteEngine{knitr::rmarkdown}
   %\VignetteEncoding{UTF-8}
 ---
